--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -33,3 +33,6 @@ h3{
     right: 50px;
     width: 25%;
 }
+.birds-2{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
